--- a/00_fundamentals.ipynb
+++ b/00_fundamentals.ipynb
@@ -17,11 +17,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.0553, 0.7452, 0.6264],\n",
-      "        [0.1143, 0.9915, 0.6926],\n",
-      "        [0.3595, 0.9248, 0.4203],\n",
-      "        [0.5221, 0.8430, 0.2699],\n",
-      "        [0.7406, 0.1395, 0.6808]])\n"
+      "tensor([[0.3023, 0.5666, 0.3111],\n",
+      "        [0.3456, 0.9782, 0.7720],\n",
+      "        [0.4102, 0.5670, 0.3115],\n",
+      "        [0.8648, 0.4188, 0.3012],\n",
+      "        [0.2466, 0.8067, 0.4341]])\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,15 +97,17 @@
       "\n",
       "        [[5., 6.],\n",
       "         [7., 8.]]])\n",
-      "random tensor: tensor([[0.0457, 0.0278, 0.9037, 0.8940],\n",
-      "        [0.3370, 0.8858, 0.8089, 0.8165],\n",
-      "        [0.3289, 0.6096, 0.8402, 0.0332]])\n",
+      "random tensor: tensor([[0.7096, 0.3148, 0.1756, 0.9096],\n",
+      "        [0.6012, 0.5901, 0.0315, 0.1598],\n",
+      "        [0.6322, 0.3064, 0.9149, 0.9504]])\n",
       "all zeros tensor: tensor([[0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.]])\n",
       "all ones tensor: tensor([[1., 1., 1., 1.],\n",
       "        [1., 1., 1., 1.],\n",
-      "        [1., 1., 1., 1.]])\n"
+      "        [1., 1., 1., 1.]])\n",
+      "zero to ten: tensor([0, 2, 4, 6, 8])\n",
+      "zeros tensor: tensor([0, 0, 0, 0, 0])\n"
      ]
     }
    ],
@@ -132,6 +134,12 @@
     "# all ones tensor\n",
     "O = torch.ones(size=(3, 4))\n",
     "\n",
+    "# use arange to create a tensor\n",
+    "zero_to_ten = torch.arange(start=0, end=10, step=2)\n",
+    "\n",
+    "# use zeros_like to create a tensor\n",
+    "zeros_tensor = torch.zeros_like(zero_to_ten)\n",
+    "\n",
     "# print the tensor\n",
     "print(\"scalar:\", a)\n",
     "print(\"vector: \", y)\n",
@@ -139,7 +147,9 @@
     "print(\"tensor:\", X)\n",
     "print(\"random tensor:\", R)\n",
     "print(\"all zeros tensor:\", Z)\n",
-    "print(\"all ones tensor:\", O)"
+    "print(\"all ones tensor:\", O)\n",
+    "print(\"zero to ten:\", zero_to_ten)\n",
+    "print(\"zeros tensor:\", zeros_tensor)"
    ]
   },
   {
