--- a/00_fundamentals.ipynb
+++ b/00_fundamentals.ipynb
@@ -10,18 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.3023, 0.5666, 0.3111],\n",
-      "        [0.3456, 0.9782, 0.7720],\n",
-      "        [0.4102, 0.5670, 0.3115],\n",
-      "        [0.8648, 0.4188, 0.3012],\n",
-      "        [0.2466, 0.8067, 0.4341]])\n"
+      "tensor([[0.4711, 0.3604, 0.2435],\n",
+      "        [0.4614, 0.0369, 0.2723],\n",
+      "        [0.0822, 0.3772, 0.7041],\n",
+      "        [0.5231, 0.5230, 0.2519],\n",
+      "        [0.3698, 0.7889, 0.9675]])\n"
      ]
     }
    ],
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.6.0.dev20241119'"
+       "'2.5.1+cu124'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,9 +97,9 @@
       "\n",
       "        [[5., 6.],\n",
       "         [7., 8.]]])\n",
-      "random tensor: tensor([[0.7096, 0.3148, 0.1756, 0.9096],\n",
-      "        [0.6012, 0.5901, 0.0315, 0.1598],\n",
-      "        [0.6322, 0.3064, 0.9149, 0.9504]])\n",
+      "random tensor: tensor([[0.1991, 0.2636, 0.8017, 0.4585],\n",
+      "        [0.9059, 0.5920, 0.5884, 0.8756],\n",
+      "        [0.4290, 0.8352, 0.5935, 0.8880]])\n",
       "all zeros tensor: tensor([[0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.]])\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +185,175 @@
     "print(\"matrix:\", Q.ndim)\n",
     "print(\"tensor:\", X.ndim)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Types\n",
+    "Here we specify data type when creating a tensor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data type:  torch.float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tensor without specifying the data type\n",
+    "dtype_tensor = torch.tensor([1.0, 2.0, 3.0, 4.0],\n",
+    "                            dtype=None,\n",
+    "                            device=None,\n",
+    "                            requires_grad=False)\n",
+    "print(\"Data type: \", dtype_tensor.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793 2.718281828459045\n",
+      "diff for pi:  -8.742278012618954e-08\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3.1415927410125732, 4, torch.float32, device(type='cpu'))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "print(math.pi, math.e)\n",
+    "\n",
+    "# Create a tensor with a specific data type of 32-bit floating point\n",
+    "float32_tensor = torch.tensor([math.pi, math.e],\n",
+    "                              dtype=torch.float32,\n",
+    "                              device=None,\n",
+    "                              requires_grad=False)\n",
+    "\n",
+    "# print the difference between math.pi and its representation in the tensor\n",
+    "print(\"diff for pi: \", math.pi - float32_tensor[0].item())\n",
+    "\n",
+    "float32_tensor[0].item(), float32_tensor.element_size(), float32_tensor.dtype, float32_tensor.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793 2.718281828459045\n",
+      "diff for pi:  0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3.141592653589793, 8, torch.float64, device(type='cpu'))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "print(math.pi, math.e)\n",
+    "\n",
+    "# Create a tensor with a specific data type of 64-bit floating point\n",
+    "float64_tensor = torch.tensor([math.pi, math.e],\n",
+    "                              dtype=torch.float64,\n",
+    "                              device=None,\n",
+    "                              requires_grad=False)\n",
+    "\n",
+    "# print the difference between math.pi and its representation in the tensor\n",
+    "print(\"diff for pi: \", math.pi - float64_tensor[0].item())\n",
+    "\n",
+    "float64_tensor[0].item(), float64_tensor.element_size(), float64_tensor.dtype, float64_tensor.device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manipulate Tensors\n",
+    "- addition\n",
+    "- subtraction\n",
+    "- multiplication (element-wise)\n",
+    "- division\n",
+    "- matrix multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor + tensor =  tensor([2., 4., 6., 8.])\n",
+      "tensor + 10 =  tensor([11., 12., 13., 14.])\n",
+      "tensor - tensor =  tensor([0., 0., 0., 0.])\n",
+      "tensor - 10 =  tensor([-9., -8., -7., -6.])\n",
+      "tensor * tensor =  tensor([ 1.,  4.,  9., 16.])\n",
+      "tensor * 10 =  tensor([10., 20., 30., 40.])\n",
+      "torch.mul(tensor, 10) =  tensor([10., 20., 30., 40.])\n",
+      "tensor / tensor =  tensor([1., 1., 1., 1.])\n",
+      "tensor / 10 =  tensor([0.1000, 0.2000, 0.3000, 0.4000])\n",
+      "torch.matmul(tensor, tensor) =  tensor(30.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## addition\n",
+    "tensor = torch.tensor([1.0, 2.0, 3.0, 4.0])\n",
+    "print(\"tensor + tensor = \", tensor + tensor)\n",
+    "print(\"tensor + 10 = \", tensor + 10)\n",
+    "\n",
+    "## subtraction\n",
+    "print(\"tensor - tensor = \", tensor - tensor)\n",
+    "print(\"tensor - 10 = \", tensor - 10)\n",
+    "\n",
+    "## multiplication (element-wise)\n",
+    "print(\"tensor * tensor = \", tensor * tensor)\n",
+    "print(\"tensor * 10 = \", tensor * 10)\n",
+    "print(\"torch.mul(tensor, 10) = \", torch.mul(tensor, 10))\n",
+    "\n",
+    "## division\n",
+    "print(\"tensor / tensor = \", tensor / tensor)\n",
+    "print(\"tensor / 10 = \", tensor / 10)\n",
+    "\n",
+    "## dot product\n",
+    "print(\"torch.matmul(tensor, tensor) = \", torch.matmul(tensor, tensor))"
+   ]
   }
  ],
  "metadata": {
@@ -203,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
