--- a/00_fundamentals.ipynb
+++ b/00_fundamentals.ipynb
@@ -10,18 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.4711, 0.3604, 0.2435],\n",
-      "        [0.4614, 0.0369, 0.2723],\n",
-      "        [0.0822, 0.3772, 0.7041],\n",
-      "        [0.5231, 0.5230, 0.2519],\n",
-      "        [0.3698, 0.7889, 0.9675]])\n"
+      "tensor([[0.2287, 0.0446, 0.9866],\n",
+      "        [0.5936, 0.0593, 0.8866],\n",
+      "        [0.2749, 0.4224, 0.8291],\n",
+      "        [0.1246, 0.4305, 0.8180],\n",
+      "        [0.3352, 0.8647, 0.6468]])\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "'2.5.1+cu124'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,9 +97,9 @@
       "\n",
       "        [[5., 6.],\n",
       "         [7., 8.]]])\n",
-      "random tensor: tensor([[0.1991, 0.2636, 0.8017, 0.4585],\n",
-      "        [0.9059, 0.5920, 0.5884, 0.8756],\n",
-      "        [0.4290, 0.8352, 0.5935, 0.8880]])\n",
+      "random tensor: tensor([[0.6396, 0.6711, 0.6537, 0.3888],\n",
+      "        [0.4787, 0.2493, 0.4810, 0.4708],\n",
+      "        [0.0648, 0.9503, 0.3214, 0.0576]])\n",
       "all zeros tensor: tensor([[0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.]])\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "(3.1415927410125732, 4, torch.float32, device(type='cpu'))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "(3.141592653589793, 8, torch.float64, device(type='cpu'))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -353,6 +353,80 @@
     "\n",
     "## dot product\n",
     "print(\"torch.matmul(tensor, tensor) = \", torch.matmul(tensor, tensor))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.matmul tensor(30.)\n",
+      "tensor @ tensor =  tensor(30.)\n",
+      "CPU times: user 2.95 ms, sys: 0 ns, total: 2.95 ms\n",
+      "Wall time: 2.15 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "print(\"torch.matmul\", torch.matmul(tensor, tensor))\n",
+    "\n",
+    "print(\"tensor @ tensor = \", tensor @ tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,3) @ (3,2) =  tensor([[0.9649, 1.0505, 0.3561, 1.1085],\n",
+      "        [0.5278, 0.5744, 0.2353, 0.5123]])\n",
+      "shape:  torch.Size([2, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the inner dimensions of the two matrices must be the same\n",
+    "# the resulting matrix will have the shape of the outer dimensions\n",
+    "# i.e. (2, 3) @ (3, 2) = (2, 2)\n",
+    "tensor_mat = torch.rand(2, 3) @ torch.rand(3, 4)\n",
+    "print(\"(2,3) @ (3,2) = \", tensor_mat)\n",
+    "print(\"shape: \", tensor_mat.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensorA:  tensor([[1, 2],\n",
+      "        [3, 4],\n",
+      "        [5, 6]]) shape:  torch.Size([3, 2])\n",
+      "tensorA.T:  tensor([[1, 3, 5],\n",
+      "        [2, 4, 6]]) shape:  torch.Size([2, 3])\n",
+      "tensorA.t():  tensor([[1, 3, 5],\n",
+      "        [2, 4, 6]]) shape:  torch.Size([2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# transpose\n",
+    "tensorA = torch.tensor([[1, 2], [3, 4], [5, 6]])\n",
+    "print(\"tensorA: \", tensorA, \"shape: \", tensorA.shape)\n",
+    "print(\"tensorA.T: \", tensorA.T, \"shape: \", tensorA.T.shape)\n",
+    "print(\"tensorA.t(): \", tensorA.t(), \"shape: \", tensorA.t().shape)"
    ]
   }
  ],
