--- a/00_fundamentals.ipynb
+++ b/00_fundamentals.ipynb
@@ -10,18 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2287, 0.0446, 0.9866],\n",
-      "        [0.5936, 0.0593, 0.8866],\n",
-      "        [0.2749, 0.4224, 0.8291],\n",
-      "        [0.1246, 0.4305, 0.8180],\n",
-      "        [0.3352, 0.8647, 0.6468]])\n"
+      "tensor([[0.7904, 0.0089, 0.2428],\n",
+      "        [0.1886, 0.2444, 0.1579],\n",
+      "        [0.4847, 0.3172, 0.1656],\n",
+      "        [0.8040, 0.3391, 0.3919],\n",
+      "        [0.2000, 0.6858, 0.3143]])\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "'2.5.1+cu124'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,9 +97,9 @@
       "\n",
       "        [[5., 6.],\n",
       "         [7., 8.]]])\n",
-      "random tensor: tensor([[0.6396, 0.6711, 0.6537, 0.3888],\n",
-      "        [0.4787, 0.2493, 0.4810, 0.4708],\n",
-      "        [0.0648, 0.9503, 0.3214, 0.0576]])\n",
+      "random tensor: tensor([[0.8365, 0.4091, 0.5110, 0.6634],\n",
+      "        [0.2815, 0.1100, 0.4280, 0.1230],\n",
+      "        [0.8911, 0.0910, 0.4915, 0.1522]])\n",
       "all zeros tensor: tensor([[0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0.]])\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "(3.1415927410125732, 4, torch.float32, device(type='cpu'))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "(3.141592653589793, 8, torch.float64, device(type='cpu'))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -366,8 +366,8 @@
      "text": [
       "torch.matmul tensor(30.)\n",
       "tensor @ tensor =  tensor(30.)\n",
-      "CPU times: user 2.95 ms, sys: 0 ns, total: 2.95 ms\n",
-      "Wall time: 2.15 ms\n"
+      "CPU times: user 1.32 ms, sys: 19 μs, total: 1.34 ms\n",
+      "Wall time: 915 μs\n"
      ]
     }
    ],
@@ -380,15 +380,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2,3) @ (3,2) =  tensor([[0.9649, 1.0505, 0.3561, 1.1085],\n",
-      "        [0.5278, 0.5744, 0.2353, 0.5123]])\n",
+      "(2,3) @ (3,2) =  tensor([[0.7828, 0.7684, 1.1607, 0.8876],\n",
+      "        [0.5300, 0.5351, 0.7048, 0.7582]])\n",
       "shape:  torch.Size([2, 4])\n"
      ]
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -427,6 +427,52 @@
     "print(\"tensorA: \", tensorA, \"shape: \", tensorA.shape)\n",
     "print(\"tensorA.T: \", tensorA.T, \"shape: \", tensorA.T.shape)\n",
     "print(\"tensorA.t(): \", tensorA.t(), \"shape: \", tensorA.t().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max:  tensor(4.)\n",
+      "min:  tensor(1.)\n",
+      "mean:  tensor(2.5000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the max, min, mean, and sum of the tensor\n",
+    "print(\"max: \", tensor.max())\n",
+    "print(\"min: \", tensor.min())\n",
+    "print(\"mean: \", tensor.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# the following code will end up with a RuntimeError\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# RuntimeError: mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long\u001b[39;00m\n\u001b[1;32m      3\u001b[0m tensor_int64 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mint64)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mtensor_int64\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long"
+     ]
+    }
+   ],
+   "source": [
+    "# the following code will end up with a RuntimeError\n",
+    "# RuntimeError: mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long\n",
+    "tensor_int64 = torch.tensor([1, 2, 3, 4], dtype=torch.int64)\n",
+    "print(\"mean: \", tensor_int64.mean())"
    ]
   }
  ],
