--- a/00_fundamentals.ipynb
+++ b/00_fundamentals.ipynb
@@ -10,18 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7904, 0.0089, 0.2428],\n",
-      "        [0.1886, 0.2444, 0.1579],\n",
-      "        [0.4847, 0.3172, 0.1656],\n",
-      "        [0.8040, 0.3391, 0.3919],\n",
-      "        [0.2000, 0.6858, 0.3143]])\n"
+      "tensor([[0.1491, 0.6564, 0.1395],\n",
+      "        [0.9654, 0.5536, 0.9790],\n",
+      "        [0.5554, 0.3806, 0.3780],\n",
+      "        [0.7797, 0.6439, 0.9923],\n",
+      "        [0.6004, 0.6136, 0.2194]])\n"
      ]
     }
    ],
@@ -453,26 +453,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# the following code will end up with a RuntimeError\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# RuntimeError: mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long\u001b[39;00m\n\u001b[1;32m      3\u001b[0m tensor_int64 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mint64)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mtensor_int64\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor(2.5000, dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# the following code will end up with a RuntimeError\n",
     "# RuntimeError: mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long\n",
     "tensor_int64 = torch.tensor([1, 2, 3, 4], dtype=torch.int64)\n",
-    "print(\"mean: \", tensor_int64.mean())"
+    "# print(\"mean: \", tensor_int64.mean())\n",
+    "\n",
+    "# to fix the error, convert the tensor to a floating point tensor\n",
+    "tensor_int64.type(torch.float64).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor:  tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])\n",
+      "tensor.reshape(3, 3):  tensor([[0, 1, 2],\n",
+      "        [3, 4, 5],\n",
+      "        [6, 7, 8]])\n",
+      "z:  tensor([[0, 1, 2],\n",
+      "        [3, 4, 5],\n",
+      "        [6, 7, 8]])\n",
+      "tensor:  tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])\n",
+      "z:  tensor([[-1,  1,  2],\n",
+      "        [ 3,  4,  5],\n",
+      "        [ 6,  7,  8]])\n",
+      "tensor:  tensor([-1,  1,  2,  3,  4,  5,  6,  7,  8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reshape the tensor\n",
+    "tensor = torch.arange(9)\n",
+    "print(\"tensor: \", tensor)\n",
+    "print(\"tensor.reshape(3, 3): \", tensor.reshape(3, 3))\n",
+    "\n",
+    "# change the view\n",
+    "z = tensor.view(3, 3)\n",
+    "print(\"z: \", z)\n",
+    "print(\"tensor: \", tensor)\n",
+    "\n",
+    "# z and tensor share the same memory\n",
+    "z[0, 0] = -1\n",
+    "print(\"z: \", z)\n",
+    "print(\"tensor: \", tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:  tensor([[-1.2129,  0.5628, -0.1500],\n",
+      "        [ 0.6058, -0.3978,  0.3751]])\n",
+      "y:  tensor([[ 0.0060, -0.2693, -1.6171],\n",
+      "        [ 0.5033,  0.0055,  1.5146]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# stack\n",
+    "x = torch.randn(2, 3)\n",
+    "y = torch.randn(2, 3)\n",
+    "print(\"x: \", x)\n",
+    "print(\"y: \", y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[-1.2129,  0.5628, -0.1500],\n",
+      "         [ 0.6058, -0.3978,  0.3751]],\n",
+      "\n",
+      "        [[ 0.0060, -0.2693, -1.6171],\n",
+      "         [ 0.5033,  0.0055,  1.5146]]])\n",
+      "tensor([[[-1.2129,  0.5628, -0.1500],\n",
+      "         [ 0.0060, -0.2693, -1.6171]],\n",
+      "\n",
+      "        [[ 0.6058, -0.3978,  0.3751],\n",
+      "         [ 0.5033,  0.0055,  1.5146]]])\n",
+      "tensor([[[-1.2129,  0.0060],\n",
+      "         [ 0.5628, -0.2693],\n",
+      "         [-0.1500, -1.6171]],\n",
+      "\n",
+      "        [[ 0.6058,  0.5033],\n",
+      "         [-0.3978,  0.0055],\n",
+      "         [ 0.3751,  1.5146]]])\n",
+      "tensor([[[-1.2129,  0.0060],\n",
+      "         [ 0.5628, -0.2693],\n",
+      "         [-0.1500, -1.6171]],\n",
+      "\n",
+      "        [[ 0.6058,  0.5033],\n",
+      "         [-0.3978,  0.0055],\n",
+      "         [ 0.3751,  1.5146]]])\n",
+      "tensor([[[-1.2129,  0.5628, -0.1500],\n",
+      "         [ 0.6058, -0.3978,  0.3751]],\n",
+      "\n",
+      "        [[-1.2129,  0.5628, -0.1500],\n",
+      "         [ 0.6058, -0.3978,  0.3751]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# stack along the first dimension\n",
+    "print(torch.stack((x, y), dim=0))\n",
+    "print(torch.stack([x, y]))\n",
+    "\n",
+    "# stack along the second dimension\n",
+    "print(torch.stack((x, y), dim=1))\n",
+    "\n",
+    "# stack along the third dimension\n",
+    "print(torch.stack((x, y), dim=2))\n",
+    "print(torch.stack((x, y), dim=-1))\n"
    ]
   }
  ],
@@ -492,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
