--- a/00_fundamentals.ipynb
+++ b/00_fundamentals.ipynb
@@ -595,6 +595,136 @@
     "print(torch.stack((x, y), dim=2))\n",
     "print(torch.stack((x, y), dim=-1))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:  tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])\n",
+      "x.shape:  torch.Size([1, 9])\n",
+      "x_squeeze:  tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+      "x_squeeze.shape:  torch.Size([9])\n",
+      "x_unsqueeze:  tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])\n",
+      "x_unsqueeze.shape:  torch.Size([1, 9])\n",
+      "x_unsqueeze:  tensor([[1],\n",
+      "        [2],\n",
+      "        [3],\n",
+      "        [4],\n",
+      "        [5],\n",
+      "        [6],\n",
+      "        [7],\n",
+      "        [8],\n",
+      "        [9]])\n",
+      "x_unsqueeze.shape:  torch.Size([9, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# squeeze and unsqueeze\n",
+    "x = torch.arange(start=1, end=10, step=1).view(1,9)\n",
+    "print(\"x: \", x)\n",
+    "print(\"x.shape: \", x.shape)\n",
+    "\n",
+    "# squeeze the tensor\n",
+    "x_squeeze = torch.squeeze(x, dim=0)\n",
+    "print(\"x_squeeze: \", x_squeeze)\n",
+    "print(\"x_squeeze.shape: \", x_squeeze.shape)\n",
+    "\n",
+    "# unsqueeze the tensor\n",
+    "x_unsqueeze = torch.unsqueeze(x_squeeze, dim=0)\n",
+    "print(\"x_unsqueeze: \", x_unsqueeze)\n",
+    "print(\"x_unsqueeze.shape: \", x_unsqueeze.shape)\n",
+    "\n",
+    "x_unsqueeze = x_squeeze.unsqueeze(dim=1)\n",
+    "print(\"x_unsqueeze: \", x_unsqueeze)\n",
+    "print(\"x_unsqueeze.shape: \", x_unsqueeze.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.shape:  torch.Size([2, 3, 4])\n",
+      "x_permute.shape:  torch.Size([3, 4, 2])\n",
+      "x_permute[0, 0, 0]:  tensor(-1)\n",
+      "x[0, 0, 0]:  tensor(-1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# permute\n",
+    "x = torch.arange(24).view(2, 3, 4)\n",
+    "# print(\"x: \", x)\n",
+    "print(\"x.shape: \", x.shape)\n",
+    "\n",
+    "# permute the tensor\n",
+    "x_permute = x.permute(1, 2, 0)\n",
+    "# print(\"x_permute: \", x_permute)\n",
+    "print(\"x_permute.shape: \", x_permute.shape)\n",
+    "\n",
+    "# permuted tensor shares the same memory with the original tensor\n",
+    "x_permute[0, 0, 0] = -1\n",
+    "print(\"x_permute[0, 0, 0]: \", x_permute[0, 0, 0])\n",
+    "print(\"x[0, 0, 0]: \", x[0, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:  tensor([[[ 0,  1,  2,  3],\n",
+      "         [ 4,  5,  6,  7],\n",
+      "         [ 8,  9, 10, 11]]])\n",
+      "x[0]:  tensor([[ 0,  1,  2,  3],\n",
+      "        [ 4,  5,  6,  7],\n",
+      "        [ 8,  9, 10, 11]])\n",
+      "x[0][1]:  tensor([4, 5, 6, 7])\n",
+      "x[0][1][2]:  tensor(6)\n",
+      "get the element 9:  tensor(9)\n",
+      "Index on x to return 5:  tensor(5)\n",
+      "Index on x to return [1, 5, 9]:  tensor([1, 5, 9])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# indexing\n",
+    "x = torch.arange(12).view(1, 3, 4)\n",
+    "print(\"x: \", x)\n",
+    "\n",
+    "# index the outermost bracket\n",
+    "print(\"x[0]: \", x[0])\n",
+    "\n",
+    "# index the middle bracket\n",
+    "print(\"x[0][1]: \", x[0][1])\n",
+    "\n",
+    "# index the innermost bracket\n",
+    "print(\"x[0][1][2]: \", x[0][1][2])\n",
+    "\n",
+    "# index the element 9\n",
+    "print(\"get the element 9: \", x[0][2][1])\n",
+    "\n",
+    "## Challenge\n",
+    "# index on x to return 5\n",
+    "print(\"Index on x to return 5: \", x[0, 1, 1])\n",
+    "\n",
+    "# index on x to return [1, 5, 9]\n",
+    "print(\"Index on x to return [1, 5, 9]: \", x[0, :, 1])"
+   ]
   }
  ],
  "metadata": {
