--- a/00_fundamentals.ipynb
+++ b/00_fundamentals.ipynb
@@ -725,6 +725,323 @@
     "# index on x to return [1, 5, 9]\n",
     "print(\"Index on x to return [1, 5, 9]: \", x[0, :, 1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Runnig tensors and PyTorch objects on GPUs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is CUDA available:  True\n",
+      "Device:  cuda\n",
+      "Number of GPUs:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for GPU access with PyTorch\n",
+    "import torch\n",
+    "print(\"Is CUDA available: \", torch.cuda.is_available())\n",
+    "\n",
+    "# device agnostic code\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "print(\"Device: \", device)\n",
+    "\n",
+    "# count the number of GPUs\n",
+    "print(\"Number of GPUs: \", torch.cuda.device_count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Put tensors on GPUs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor_rand:  tensor([[0.6117, 0.1904, 0.3525],\n",
+      "        [0.5000, 0.9904, 0.1421]])\n",
+      "tensor_rand.device:  cpu\n",
+      "tensor_rand.device:  cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a random tensor\n",
+    "tensor_rand = torch.rand(2,3)\n",
+    "print(\"tensor_rand: \", tensor_rand)\n",
+    "print(\"tensor_rand.device: \", tensor_rand.device)\n",
+    "\n",
+    "# move the tensor to the GPU\n",
+    "tensor_rand = tensor_rand.to(device)\n",
+    "print(\"tensor_rand.device: \", tensor_rand.device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numpy is unable to run on GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# convert the tensor to a numpy array\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m numpy_rand \u001b[38;5;241m=\u001b[39m \u001b[43mtensor_rand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first."
+     ]
+    }
+   ],
+   "source": [
+    "# convert the tensor to a numpy array\n",
+    "# leave the error here on purpose\n",
+    "numpy_rand = tensor_rand.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# numpy can not run on the GPU\n",
+    "# move the tensor back to the CPU\n",
+    "numpy_rand = tensor_rand.cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "- Create a random tensor with shape (7, 7).\n",
+    "- Perform a matrix multiplication on the tensor from previous step with another random tensor with shape (1, 7) (hint: you may have to transpose the second tensor).\n",
+    "- Set the random seed to 0 and do exercises 2 & 3 over again.\n",
+    "- Speaking of random seeds, we saw how to set it with torch.manual_seed() but is there a GPU equivalent? (hint: you'll need to look into the documentation for torch.cuda for this one). If there is, set the GPU random seed to 1234.\n",
+    "- Create two random tensors of shape (2, 3) and send them both to the GPU (you'll need access to a GPU for this). Set torch.manual_seed(1234) when creating the tensors (this doesn't have to be the GPU random seed).\n",
+    "- Perform a matrix multiplication on the tensors you created in prvious step (again, you may have to adjust the shapes of one of the tensors).\n",
+    "- Find the maximum and minimum values of the output of previous step.\n",
+    "- Find the maximum and minimum index values of the output of previous step.\n",
+    "- Make a random tensor with shape (1, 1, 1, 10) and then create a new tensor with all the 1 dimensions removed to be left with a tensor of shape (10). Set the seed to 7 when you create it and print out the first tensor and it's shape as well as the second tensor and it's shape."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.8823, 0.9150, 0.3829, 0.9593, 0.3904, 0.6009, 0.2566],\n",
+      "        [0.7936, 0.9408, 0.1332, 0.9346, 0.5936, 0.8694, 0.5677],\n",
+      "        [0.7411, 0.4294, 0.8854, 0.5739, 0.2666, 0.6274, 0.2696],\n",
+      "        [0.4414, 0.2969, 0.8317, 0.1053, 0.2695, 0.3588, 0.1994],\n",
+      "        [0.5472, 0.0062, 0.9516, 0.0753, 0.8860, 0.5832, 0.3376],\n",
+      "        [0.8090, 0.5779, 0.9040, 0.5547, 0.3423, 0.6343, 0.3644],\n",
+      "        [0.7104, 0.9464, 0.7890, 0.2814, 0.7886, 0.5895, 0.7539]])\n",
+      "tensor([[0.8823, 0.9150, 0.3829, 0.9593, 0.3904, 0.6009, 0.2566]])\n",
+      "tensor([[0.8823],\n",
+      "        [0.9150],\n",
+      "        [0.3829],\n",
+      "        [0.9593],\n",
+      "        [0.3904],\n",
+      "        [0.6009],\n",
+      "        [0.2566]])\n",
+      "CPU times: user 2.36 ms, sys: 867 μs, total: 3.23 ms\n",
+      "Wall time: 2.71 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# a random tensor with shape (7, 7)\n",
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "# set the seed for reproducibility\n",
+    "RANDOM_SEED = 42\n",
+    "\n",
+    "# set the seed for generating random numbers\n",
+    "# torch.cuda.manual_seed(RANDOM_SEED)\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "x = torch.rand(7, 7)\n",
+    "print(x)\n",
+    "\n",
+    "# set the seed for generating random numbers\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "y = torch.rand(1, 7)\n",
+    "print(y)\n",
+    "\n",
+    "# transpose the tensor\n",
+    "y_T = y.T\n",
+    "print(y_T)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matrix multiplication: tensor([[3.2618],\n",
+      "        [3.4084],\n",
+      "        [2.4866],\n",
+      "        [1.4525],\n",
+      "        [1.7079],\n",
+      "        [2.7291],\n",
+      "        [2.9204]])\n",
+      "CPU times: user 1.57 ms, sys: 938 μs, total: 2.51 ms\n",
+      "Wall time: 1.7 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# multiply the two tensors\n",
+    "z = torch.matmul(x, y_T)\n",
+    "print(\"matrix multiplication:\", z)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# put the tensor on the GPU\n",
+    "x = x.to(device)\n",
+    "y_T = y_T.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matrix multiplication on the GPU: tensor([[3.2618],\n",
+      "        [3.4084],\n",
+      "        [2.4866],\n",
+      "        [1.4525],\n",
+      "        [1.7079],\n",
+      "        [2.7291],\n",
+      "        [2.9204]], device='cuda:0')\n",
+      "CPU times: user 2.75 ms, sys: 141 μs, total: 2.89 ms\n",
+      "Wall time: 2.14 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# multiply the two tensors\n",
+    "z = torch.matmul(x, y_T)\n",
+    "print(\"matrix multiplication on the GPU:\", z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min:  tensor(1.4525)\n",
+      "max:  tensor(3.4084)\n",
+      "argmin:  tensor(3)\n",
+      "argmax:  tensor(1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the min and max values of the tensor\n",
+    "print(\"min: \", z.min())\n",
+    "print(\"max: \", z.max())\n",
+    "\n",
+    "# their indices\n",
+    "print(\"argmin: \", z.argmin())\n",
+    "print(\"argmax: \", z.argmax())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:  tensor([[[[0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297,\n",
+      "           0.3653, 0.8513]]]])\n",
+      "x.shape:  torch.Size([1, 1, 1, 10])\n",
+      "x_squeeze:  tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
+      "        0.8513])\n",
+      "x_squeeze.shape:  torch.Size([10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make a random tensor with shape (1, 1, 1, 10) and then create a new tensor with all the 1 dimensions removed\n",
+    "# to be left with a tensor of shape (10). Set the seed to 7 when you create it and print out the first tensor\n",
+    "# and it's shape as well as the second tensor and it's shape.\n",
+    "\n",
+    "# set the seed for generating random tensors\n",
+    "RANDOM_SEED = 7\n",
+    "torch.manual_seed(7)\n",
+    "x = torch.rand(1, 1, 1, 10)\n",
+    "print(\"x: \", x)\n",
+    "print(\"x.shape: \", x.shape)\n",
+    "\n",
+    "# squeeze the tensor\n",
+    "x_squeeze = x.squeeze()\n",
+    "print(\"x_squeeze: \", x_squeeze)\n",
+    "print(\"x_squeeze.shape: \", x_squeeze.shape)\n"
+   ]
   }
  ],
  "metadata": {
@@ -743,7 +1060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
