--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -214,6 +214,62 @@
     "# plot the predictions\n",
     "plot_predictions(predictions=y_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "**Training Steps**\n",
+    "1. **Forward pass** - The model goes through all of the training data once, performing its `forward()` function calculations (`model(x_train)`).\n",
+    "2. **Calculate the loss** - The model's outputs (predictions) are compared to the ground truth and evaluated to see how wrong they are (`loss = loss_fn(y_pred, y_train`).\n",
+    "3. **Zero gradients** - The optimizers gradients are set to zero (they are accumulated by default) so they can be recalculated for the specific training step (`optimizer.zero_grad()`).\n",
+    "4. **Perform backpropagation on the loss** - Computes the gradient of the loss with respect for every model parameter to be updated (each parameter with `requires_grad=True`). This is known as backpropagation, hence \"backwards\" (`loss.backward()`).\n",
+    "5. **Step the optimizer (gradient descent)** - Update the parameters with `requires_grad=True` with respect to the loss gradients in order to improve them (`optimizer.step()`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a linear regression model class\n",
+    "# this time we will use the build-in Linear layer which comes in handy\n",
+    "# than creating the weight and bias parameters manually.\n",
+    "class LinearRegressionModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the random seed\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "# set the number of epochs\n",
+    "epochs = 100\n",
+    "\n",
+    "# detect the available device\n",
+    "if torch.cuda.is_available():\n",
+    "    device = 'cuda'\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = 'mps'\n",
+    "else:\n",
+    "    device = 'cpu'\n",
+    "\n",
+    "# put the data on available device\n",
+    "x_train = x_train.to(device)\n",
+    "y_train = y_train.to(device)\n",
+    "x_test = x_test.to(device)\n",
+    "y_test = y_test.to(device)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
