--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -419,6 +419,60 @@
     "\n",
     "# plot the predictions\n",
     "plot_predictions(predictions=test_pred.cpu().detach())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Saving and Loading Models](https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-and-loading-models)\n",
+    "Saving models for later inference and sharing them with others.\n",
+    "\n",
+    "Handy methods\n",
+    "- torch.save(model, PATH)\n",
+    "- torch.load(PATH)\n",
+    "- torch.nn.Module.load_state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deserialized model:  OrderedDict([('linear_layer.weight', tensor([[0.6968]], device='mps:0')), ('linear_layer.bias', tensor([0.3025], device='mps:0'))])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "device(type='mps', index=0)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Save the model\n",
+    "from pathlib import Path\n",
+    "\n",
+    "path_model = Path(\"LinearRegressionModel.pth\")\n",
+    "torch.save(model.state_dict(), path_model)\n",
+    "\n",
+    "## Load the model\n",
+    "# create an instance of the model\n",
+    "model_loaded = LinearRegressionModel()\n",
+    "model_deserialized = torch.load(path_model, weights_only=True)\n",
+    "print(\"Deserialized model: \", model_deserialized)\n",
+    "# print(\"Current device:\", next(model_deserialized).device)\n",
+    "model_loaded.load_state_dict(model_deserialized)\n",
+    "model_loaded.to(device) ## put the model on the device\n",
+    "next(model_loaded.parameters()).device"
    ]
   }
  ],
