--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -436,25 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deserialized model:  OrderedDict([('linear_layer.weight', tensor([[0.6968]], device='mps:0')), ('linear_layer.bias', tensor([0.3025], device='mps:0'))])\n"
+      "Deserialized model:  OrderedDict([('linear_layer.weight', tensor([[0.6968]], device='mps:0')), ('linear_layer.bias', tensor([0.3025], device='mps:0'))])\n",
+      "Model loaded:  OrderedDict([('linear_layer.weight', tensor([[0.6968]])), ('linear_layer.bias', tensor([0.3025]))])\n",
+      "Current device:  mps:0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "device(type='mps', index=0)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -471,8 +463,9 @@
     "print(\"Deserialized model: \", model_deserialized)\n",
     "# print(\"Current device:\", next(model_deserialized).device)\n",
     "model_loaded.load_state_dict(model_deserialized)\n",
+    "print(\"Model loaded: \", model_loaded.state_dict())\n",
     "model_loaded.to(device) ## put the model on the device\n",
-    "next(model_loaded.parameters()).device"
+    "print(\"Current device: \", next(model_loaded.parameters()).device)"
    ]
   }
  ],
