--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "9 -0.110616  1.042207      0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x11ca27f40>"
+       "<matplotlib.collections.PathCollection at 0x15b6a54b0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -255,10 +255,10 @@
     {
      "data": {
       "text/plain": [
-       "(torch.Tensor, torch.float64)"
+       "(numpy.ndarray, dtype('float64'))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,31 +276,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_tensor_float type:  <class 'torch.Tensor'> torch.float32\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(torch.Tensor, torch.float64)"
+       "(torch.Tensor, torch.float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# convert data to tensor\n",
-    "X_tensor = torch.from_numpy(X) # shall the type of values be converted to float32??\n",
-    "y_tensor = torch.from_numpy(y)\n",
+    "# X_tensor = torch.from_numpy(X) # shall the type of values be converted to float32??\n",
+    "# y_tensor = torch.from_numpy(y) # witout conversion, the type is float64\n",
+    "\n",
+    "# explicitly convert to float32\n",
+    "X_tensor = torch.from_numpy(X).float()\n",
+    "y_tensor = torch.from_numpy(y).float()\n",
+    "\n",
+    "# convert data to float on purpose\n",
+    "X_tensor_float = X_tensor.float()\n",
+    "print(\"X_tensor_float type: \", type(X_tensor_float), X_tensor_float.dtype)\n",
     "\n",
     "type(X_tensor), X_tensor.dtype"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note:\n",
+    "> Tensor only supports `float32` during computing prediction.\n",
+    "> If data is not explicitly converted to `float32` beforehand,\n",
+    "> it will run into the following error.\n",
+    "\n",
+    "```text\n",
+    "---------------------------------------------------------------------------\n",
+    "TypeError                                 Traceback (most recent call last)\n",
+    "Cell In[30], line 2\n",
+    "      1 # Show the predictive performance of the model without training\n",
+    "----> 2 untrained_preds = model(X_test.to(device))\n",
+    "      3 # Print the untrained predictions\n",
+    "      4 print(\"Untrained model predictions:\\n\", untrained_preds[:10])\n",
+    "\n",
+    "TypeError: Cannot convert a MPS Tensor to float64 dtype as the MPS framework doesn't support float64. Please use float32 instead.\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +346,7 @@
        "(800, 200, 800, 200)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,6 +359,188 @@
     "    X_tensor, y_tensor, test_size=0.2, random_state=42)\n",
     "\n",
     "len(X_train), len(X_test), len(y_train), len(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building a model\n",
+    "\n",
+    "TODO:\n",
+    "1. Setup device agnostic code, so our code will run on an accelerator (GPU) if there is one\n",
+    "2. Construct a model (by subclassing, `nn.Module`)\n",
+    "3. Define a loss function and optimizer\n",
+    "4. Create a training and test loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set up device agnostic code\n",
+    "# Note: import pytorch if not already imported\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "# check if macos are available\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device = \"mps\"  # for macos\n",
+    "elif torch.cuda.is_available():\n",
+    "    device = \"cuda\"\n",
+    "else:\n",
+    "    device = \"cpu\"\n",
+    "\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: create a model by the following steps.\n",
+    "\n",
+    "> forward: inputs -> layer1(input layer) -> layer2(hidden layer) -> output\n",
+    "\n",
+    "1. Subclass `nn.Module` (almost all models in Pytorch subclass)\n",
+    "2. Create 2 `nn.Linear()` layers that are capable of handling the shapes of data\n",
+    "3. Defines a `forward()` method that outlines the forward pass (or forward computation) of the model\n",
+    "4. Instantiate an instance of our model class and send it to the target `device`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CircleModel(\n",
+      "  (layer_1): Linear(in_features=2, out_features=5, bias=True)\n",
+      "  (layer_2): Linear(in_features=5, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Construct a model by subclassing `nn.Module`\n",
+    "class CircleModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # Define the layers of the model\n",
+    "        self.layer_1 = nn.Linear(in_features=2, out_features=5)\n",
+    "        self.layer_2 = nn.Linear(in_features=5, out_features=1)\n",
+    "\n",
+    "        ## Note: there is a straitforward method to define the model by using `nn.Sequential`\n",
+    "        # self.model = nn.Sequential(\n",
+    "        #   nn.Linear(in_features=1, out_features=5),\n",
+    "        #   nn.Linear(in_features=5, out_features=1)\n",
+    "        # )\n",
+    "\n",
+    "    # Define the forward pass for computing the output of the model\n",
+    "    def forward(self, x):\n",
+    "        return self.layer_2(self.layer_1(x))\n",
+    "\n",
+    "# Instantiate the model\n",
+    "model = CircleModel().to(device)\n",
+    "# Print the model architecture\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (0): Linear(in_features=2, out_features=5, bias=True)\n",
+      "  (1): Linear(in_features=5, out_features=1, bias=True)\n",
+      ")\n",
+      "mps:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a model by using `nn.Sequential`\n",
+    "model_sequential = nn.Sequential(\n",
+    "    nn.Linear(in_features=2, out_features=5),\n",
+    "    nn.Linear(in_features=5, out_features=1)\n",
+    ").to(device)\n",
+    "# Print the model architecture\n",
+    "print(model_sequential)\n",
+    "# Print what device the model is on\n",
+    "print(next(model_sequential.parameters()).device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Untrained model predictions:\n",
+      " tensor([[-0.3138],\n",
+      "        [-0.2670],\n",
+      "        [-0.2953],\n",
+      "        [-0.3186],\n",
+      "        [-0.0960],\n",
+      "        [-0.0686],\n",
+      "        [-0.1129],\n",
+      "        [-0.0671],\n",
+      "        [-0.2999],\n",
+      "        [-0.2704]], device='mps:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show the predictive performance of the model without training\n",
+    "# turn on inference mode\n",
+    "with torch.inference_mode():\n",
+    "    untrained_preds = model(X_test.to(device))\n",
+    "# Print the untrained predictions\n",
+    "print(\"Untrained model predictions:\\n\", untrained_preds[:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note: (with and without turning on inference mode)\n",
+    "> Without turning on inference mode, PyTorch will keep tracking gradient which will consume extra resources.\n",
+    "> The following results is produced without inference mode, and it shows the `grad_fn` in the last line.\n",
+    "\n",
+    "```text\n",
+    "Untrained model predictions:\n",
+    " tensor([[-0.3138],\n",
+    "        [-0.2670],\n",
+    "        [-0.2953],\n",
+    "        [-0.3186],\n",
+    "        [-0.0960],\n",
+    "        [-0.0686],\n",
+    "        [-0.1129],\n",
+    "        [-0.0671],\n",
+    "        [-0.2999],\n",
+    "        [-0.2704]], device='mps:0', grad_fn=<SliceBackward0>)\n",
+    "```"
    ]
   }
  ],
